<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-39dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnViewFeedbacks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnViewFeedback" />

            <Button
                android:id="@+id/btnViewList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="activityList"
                android:text="@string/btnList" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/btnTggEnable"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0"
            android:checked="false"
            android:text="@string/btnTggEnable"
            android:textOff="Habilitar"
            android:textOn="Desabilitar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelUnidade"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/labelUnidad"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerCampus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelName" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    tools:text="@string/editName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelCourse"
                    android:layout_width="13dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelCourse" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.53"
                    android:text="@string/autoCompleteCourse" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioHorario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:clickable="false">

                <RadioButton
                    android:id="@+id/manhaAB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AB - Manhã" />

                <RadioButton
                    android:id="@+id/manhaCD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CD - Manhã" />

                <RadioButton
                    android:id="@+id/tardeAB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AB - Tarde" />

                <RadioButton
                    android:id="@+id/tardeCD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CD - Tarde" />

                <Button
                    android:id="@+id/btnClearHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clearCheckedHours"
                    android:text="Limpar horas" />
            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cadastrarAluno"
                android:text="@string/btnRegister" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>